syntax = "proto3";
package graft.core.v1;

message VolumeId {
  // The VolumeId is a 16 byte Gid (Graft ID).
  bytes data = 1;
}

message SegmentId {
  // The SegmentId is a 16 byte Gid (Graft ID).
  bytes data = 1;
}
